--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                             <div class="collapse navbar-collapse" id="myNav">
                                 <ul class="navbar-nav ml-auto mr-lg-5">
                                     <li class="nav-item">
-                                      <a href="index.html" class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show">Home </a>
+                                      <a href="index.html" class="nav-link js-scroll-trigger">Home </a>
                                     </li> 
                                     <li class="nav-item">
-                                      <a href="coding_notes.html" class="nav-link js-scroll-trigger" href="#contact" data-toggle="collapse" data-target=".navbar-collapse.show">Coding Notes </a>
+                                      <a href="coding_notes.html" class="nav-link js-scroll-trigger">Coding Notes </a>
                                     </li>
                                     <li class="nav-item">
                                       <a class="nav-link js-scroll-trigger" href="http://www.codingnology.com" target="_blank">Blog </a>
